SpringBootSSM-Thymeleaf字面值与字符串拼接

--- a/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
+++ b/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
@@ -33,5 +33,12 @@
     <p>
         <a th:href="@{/hello(id=1,action='gx')}">跳转传参</a>
     </p>
+    <hr>
+    <p th:text="${'hello' + hero.username}"></p>
+    <p th:text="${1+2}"></p>
+    <p th:text="${true}"></p>
+    <p th:text="${true == false}"></p>
+    <p th:text="'Hello' + ${hero.username}"></p>
+    <p th:text="|哈罗${hero.username}|"></p>
 </body>
 </html>
