--- a/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
+++ b/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
@@ -40,5 +40,28 @@
     <p th:text="${true == false}"></p>
     <p th:text="'Hello' + ${hero.username}"></p>
     <p th:text="|哈罗${hero.username}|"></p>
+    <hr>
+    <div>
+        <ul>
+            <li>算数运算符+ - * / %
+                <p th:text="1+1"></p>
+                <p th:text="17 % 5 - 2"></p>
+            </li>
+            <li>比较运算符 大于、小于、大于等于、小于等于
+                <p th:text="1 gt 2"></p>
+                <p th:text="1 lt 2"></p>
+                <p th:text="1 ge 2"></p>
+                <p th:text="1 le 2"></p>
+            </li>
+            <li>三元运算符
+                <p th:text="1 gt 2 ? '真' : '假'"></p>
+            </li>
+            <li>默认表达式，前者为空就显示后者，前者不为空就显示本身
+                <p th:text="null ?: '后者内容'"></p>
+                <p th:text="${hero.username} ?: '默认值'"></p>
+                <p th:text="${hero.username} != null ? ${hero.username} : '默认值'" alt="效果等同于上一行代码"></p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
