SpringBootSSM-内联与局部变量

--- a/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
+++ b/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
@@ -63,5 +63,15 @@
             </li>
         </ul>
     </div>
+    <hr>
+    <!-- 内联写法 -->
+    [[${name}]]     <!-- 输出纯字符串内容 -->
+    [(${name})]     <!-- 解析html标签输出 -->
+    <hr>
+    <!-- 局部变量 -->
+    <div th:with="heroN = ${allHero[0]}">
+        <p th:text="${heroN.username}"></p>
+        <p th:text="${heroN.phone}"></p>
+    </div>
 </body>
 </html>
