SpringBootSSM-片段的引入

--- a/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
+++ b/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/myhello.html
@@ -113,5 +113,9 @@
     <p th:text="${#request.getAttribute('name')}"></p>
     <p th:text="${#strings.toUpperCase(name)}"></p>
     <p th:text="${#strings.abbreviate(name,10)}"></p>
+    <!-- 布局 -->
+    <div th:insert="~{base::header}"></div>
+    <h1>中部</h1>
+    <div th:insert="~{base::#footer}"></div>
 </body>
 </html>
