SpringBootSSM-片段引入传值

--- a/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/base.html
+++ b/04SpringBootSSMPro-集成Mybatis/src/main/resources/templates/base.html
@@ -12,7 +12,7 @@
 
 <footer id="footer">
     <!--<h1  th:class="${active == 'footer' ? 'red' : ''}" >尾部-&#45;&#45;</h1>-->
-    <p>尾部</p>
+    <p th:class="${active == 'footer' ? 'red':''}">尾部</p>
 </footer>
 
 
