--- a/05SpringBootThymeleafStudy/src/main/resources/templates/login.html
+++ b/05SpringBootThymeleafStudy/src/main/resources/templates/login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>撩课-后台管理系统</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="js/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="js/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="css/index.css">
-    <script src="js/jquery/dist/jquery.js"></script>
-    <script src="js/bootstrap/dist/js/bootstrap.js"></script>
+    <link rel="shortcut icon" th:href="@{~/images/favicon.ico}" type="image/x-icon">
+    <link rel="stylesheet" th:href="@{~/js/bootstrap/dist/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{~/js/font-awesome/css/font-awesome.css}">
+    <link rel="stylesheet" th:href="@{~/css/index.css}">
+    <script th:src="@{~/js/jquery/dist/jquery.js}"></script>
+    <script th:src="@{~/js/bootstrap/dist/js/bootstrap.js}"></script>
 </head>
 <body>
     <!-- 登录 -->
