--- a/05SpringBootThymeleafStudy/src/main/resources/templates/login.html
+++ b/05SpringBootThymeleafStudy/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-lg btn-danger btn-block" th:text="#{login.btn}"></button>
-                <a class="language">中文</a>|<a class="language">English</a>
+                <a class="language" th:href="@{/login(lan='zh_CN')}">中文</a>|<a class="language" th:href="@{/login(lan='en_US')}">English</a>
             </form>
         </div>
     </div>
