--- a/05SpringBootThymeleafStudy/src/main/resources/templates/main.html
+++ b/05SpringBootThymeleafStudy/src/main/resources/templates/main.html
@@ -58,7 +58,7 @@
             </ol>
             <div class="panel panel-default user-list">
                 <div class="panel-body">
-                    <a href="add.html" class="btn btn-primary">添加英雄</a>
+                    <a th:href="@{/add}" class="btn btn-primary">添加英雄</a>
                 </div>
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
