--- a/05SpringBootThymeleafStudy/src/main/resources/templates/add.html
+++ b/05SpringBootThymeleafStudy/src/main/resources/templates/add.html
@@ -59,7 +59,17 @@
                 <div class="panel-body">
 
                 </div>
+
+                <!--
+                    restful请求
+                    1、SpringMVC中配置HiddenHttpMethodFilter;（SpringBoot在WebMvcAutoConfigration自动配置好的）
+                    2、页面创建一个post表单
+                    3、input中 name="_method";value就是我们指定的请求方式
+                -->
+
                 <form th:action="@{/addHero}" class="form-horizontal" method="post">
+                    <input type="hidden" name="_method" value="put" th:if="${hero!=null}"/>
+                    <input type="hidden" name="id" th:if="${hero!=null}" th:value="${hero.id}">
 
                     <input type="hidden" name="_method" value="put" th:if="${hero!=null}"/>
                     <input type="hidden" name="id" th:if="${hero!=null}" th:value="${hero.id}">
